# ai-computer

./: ARCHITECTURE.md  LICENSE  README.md  create.sh  pyproject.toml
ai_computer/: interrupts.py  main.py  memory.py  micro_ops.py  processor.py  requirements.txt
ai_computer/peripherals/: __init__.py  base.py  bash_shell.py  clock.py  filesystem.py  gpt4_chat.py  tick_counter.py  user_chat.py
os/: kernel.md  kernel2.md
tools/: compiler.py
